Ajustar botão e div do botão

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 </ul>
             </section>
         </div>
-        <div>
-            <button>Conhecer personagens</button>
+        <div id="div-botao">
+            <button id="botao">Conhecer personagens</button>
         </div>
     </main>
 </body>
