Implementar informações dos personagens e corrigir erros de sintaxe

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <section>
                     <img id="imagemPersonagemUm" src="https://montinkantigo.s3.amazonaws.com/data/camisas/rick-and-morty-dancing-5de7a052a4a3c-estampa-303.png" alt="Rick e Morty dançando.">
                     <ul class="detalhes-container">
-                        <li>Nome: <p id="nomePersonagemDoUm"></p></li>
+                        <li>Nome: <p id="nomePersonagemUm"></p></li>
                         <li>Espécie <p id="especiePersonagemUm"></p></li>
-                        <li>Está vivo? <p id="CondicaoPersonagemUm"></p></li>
+                        <li>Está vivo? <p id="condicaoPersonagemUm"></p></li>
                     </ul>
                 </section>
                 <section>
@@ -24,7 +24,7 @@
                     <ul class="detalhes-container">
                         <li>Nome: <p id="nomePersonagemDois"></p></li>
                         <li>Espécie <p id="especiePersonagemDois"></p></li>
-                        <li>Está vivo? <p id="CondicaoPersonagemDois"></p></li>
+                        <li>Está vivo? <p id="condicaoPersonagemDois"></p></li>
                     </ul>
                 </section>
                 <section>
@@ -32,7 +32,7 @@
                     <ul class="detalhes-container">
                         <li>Nome: <p id="nomePersonagemTres"></p></li>
                         <li>Espécie <p id="especiePersonagemTres"></p></li>
-                        <li>Está vivo? <p id="CondicaoPersonagemTres"></p></li>
+                        <li>Está vivo? <p id="condicaoPersonagemTres"></p></li>
                     </ul>
                 </section>
             </div>
